# ChangeLog for sys-apps/file
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.125 2007/02/13 15:55:29 eroyf Exp $

  13 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> file-4.19.ebuild:
  Stable on MIPS; bug #165717

  13 Feb 2007; Markus Rothe <corsair@gentoo.org> file-4.19.ebuild:
  Stable on ppc64; bug #165717

  10 Feb 2007; nixnut <nixnut@gentoo.org> ChangeLog:
  Stable on ppc wrt bug 165717

  08 Feb 2007; Luis Medinas <metalgod@gentoo.org> file-4.19.ebuild:
  Stable on amd64. Bug #165717.

  07 Feb 2007; Jeroen Roovers <jer@gentoo.org> file-4.19.ebuild:
  Stable for HPPA (bug #165717).

  07 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> file-4.19.ebuild:
  Stable on sparc wrt #165717

  07 Feb 2007; Raúl Porcel <armin76@gentoo.org> file-4.19.ebuild:
  x86 stable wrt bug 165717

*file-4.19-r1 (07 Feb 2007)

  07 Feb 2007; Mike Frysinger <vapier@gentoo.org>
  +files/file-4.19-init-file.patch, +files/file-4.19-wcwidth.patch,
  +file-4.19-r1.ebuild:
  Patch by Jeff Hansen to initialize the file member #163948. Also fix up
  wcwidth prototype.

  22 Dec 2006; Alexander H. Færøy <eroyf@gentoo.org> file-4.18.ebuild:
  Stable on MIPS; bug #144624

  14 Dec 2006; Peter Weller <welp@gentoo.org> file-4.18.ebuild:
  Added amd64 keyword wrt bug #1446244

  14 Dec 2006; Jeroen Roovers <jer@gentoo.org> file-4.18.ebuild:
  Stable for HPPA (bug #144624).

  14 Dec 2006; Brent Baude <ranger@gentoo.org> file-4.18.ebuild:
  Marking file-4.18 ppc64 per bug request 144624

  13 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> file-4.18.ebuild:
  ppc stable, bug #144624

  13 Dec 2006; Ferris McCormick <fmccor@gentoo.org> file-4.18.ebuild:
  Stable on sparc --- Bug #144624 --- builds and seems to work fine.

  13 Dec 2006; Christian Faulhammer <opfer@gentoo.org> file-4.18.ebuild:
  stable x86, bugs #144624

*file-4.19 (12 Dec 2006)
