@@ -1,10 +1,10 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/file-4.18.ebuild,v 1.15 2007/02/07 04:38:50 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/file-4.20.ebuild,v 1.1 2007/03/02 16:49:59 vapier Exp $
 
 EAPI="prefix"
 
-inherit eutils distutils libtool
+inherit eutils distutils libtool flag-o-matic
 
 DESCRIPTION="identify a file's format by scanning binary data for patterns"
 HOMEPAGE="ftp://ftp.astron.com/pub/file/"
@@ -13,7 +13,7 @@ SRC_URI="ftp://ftp.gw.com/mirrors/pub/unix/file/${P}.tar.gz
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="~ppc-macos ~x86 ~x86-macos"
+KEYWORDS="~ppc-macos ~sparc-solaris ~x86 ~x86-macos ~x86-solaris"
 IUSE="python"
 
 DEPEND=""
@@ -23,6 +23,7 @@ src_unpack() {
 	cd "${S}"
 
 	epatch "${FILESDIR}"/${PN}-4.15-libtool.patch #99593
+	epatch "${FILESDIR}"/${PN}-4.19-init-file.patch #163948
 
 	elibtoolize
 	epunt_cxx
@@ -35,6 +36,9 @@ src_unpack() {
 }
 
 src_compile() {
+	# file uses things like strndup() and wcwidth()
+	append-flags -D_GNU_SOURCE
+
 	econf --datadir=${EPREFIX}/usr/share/misc || die
 	emake || die "emake failed"
 
