@@ -1,3 +1,0 @@
-MD5 ce1aa9b0316feb57d40a48cfe6b606e4 file-4.18.tar.gz 536447
-RMD160 27a1776f732f7be7650ec9437f1fb1edf4077bc4 file-4.18.tar.gz 536447
-SHA256 5090d5123ea642842d04d3f93a821e1372e5d9e434c74c08ee2483cc150a6273 file-4.18.tar.gz 536447
