@@ -1,0 +1,3 @@
+MD5 709cfeea8b802f80d21da915658cd9fe file-4.20.tar.gz 548412
+RMD160 7fe44509cf9da1df7243ba3787163d50c2fb3193 file-4.20.tar.gz 548412
+SHA256 dd199092f347f1a26c4a8e5f0f7c917f904b2f1e7fc325eb1c875e1470983f1d file-4.20.tar.gz 548412
