@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/file
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.125 2007/02/13 15:55:29 eroyf Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.126 2007/03/02 16:49:59 vapier Exp $
+
+*file-4.20 (02 Mar 2007)
+
+  02 Mar 2007; Mike Frysinger <vapier@gentoo.org> +file-4.20.ebuild:
+  Version bump.
 
   13 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> file-4.19.ebuild:
   Stable on MIPS; bug #165717
